#add base styles

--- a/src/styles/default/root.scss
+++ b/src/styles/default/root.scss
@@ -3,6 +3,8 @@
 	--font-size_normal: calc(var(--font-size-init-number) * 1px);
 	--font-size_small: 12px;
 
+	--font-line-height: normal;
+
 	--transition-duration: 0.2s;
 
 	--background: #ffffff;
