--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -19,12 +19,17 @@ html {
 
 html,
 body,
-main,
 #root {
 	display: flex;
 	flex-direction: column;
 	flex-grow: 1;
 	height: 100%;
+}
+
+main {
+	display: flex;
+	flex-direction: column;
+	flex-grow: 1;
 }
 
 body {
