--- a/src/styles/default/root.scss
+++ b/src/styles/default/root.scss
@@ -7,29 +7,20 @@
 
 	--transition-duration: 0.2s;
 
-	--background: #ffffff;
-	--foreground: #242444;
+	// colors
+	--color-black: #212121;
+	--color-black-opacity-10: #21212110;
+	--color-black-opacity-30: #21212130;
+	--color-black-opacity-50: #21212150;
 
-	--color-red-light: #f11d54;
-	--color-red-medium: #f11d54;
-	--color-red-dark: #d91a4d;
+	--color-white: #fff;
+	--color-gray-1: #f8f8f8;
+	--color-red-1: #ff4a4a;
 
-	--color-gray-extra-light-opacity: #f2f2f280;
-	--color-gray-extra-light: #f2f2f2;
-	--color-gray-light: #f3f3f3;
-	--color-gray-medium: #e4e4e4;
-	--color-gray-dark: #bfbfbf;
-	--color-gray-extra-dark: #666666;
+	--color-background-1: var(--color-white);
+	--color-text-1: var(--color-black);
+	--color-background-2: var(--color-black);
+	--color-text-2: var(--color-white);
 
-	&.dark {
-		--background: #242444;
-		--foreground: #ffffff;
-	}
+	// &.dark {}
 }
-
-// @media (prefers-color-scheme: dark) {
-//   :root {
-//     --background: #0a0a0a;
-//     --foreground: #ededed;
-//   }
-// }
