--- a/src/styles/default/root.scss
+++ b/src/styles/default/root.scss
@@ -14,13 +14,16 @@
 	--color-black-opacity-50: #21212150;
 
 	--color-white: #fff;
-	--color-gray-1: #f8f8f8;
-	--color-red-1: #ff4a4a;
+	--color-gray: #f8f8f8;
+	--color-red: #ff4a4a;
 
 	--color-background-1: var(--color-white);
 	--color-text-1: var(--color-black);
 	--color-background-2: var(--color-black);
 	--color-text-2: var(--color-white);
 
-	// &.dark {}
+	&.dark {
+		// --color-background-1: var(--color-black);
+		// --color-text-1: var(--color-white);
+	}
 }
