--- a/src/styles/mixins/typography.scss
+++ b/src/styles/mixins/typography.scss
@@ -3,57 +3,61 @@
 @import "../mixins/breakpoints.scss";
 
 @mixin h1() {
-	font-weight: 700;
-	font-size: convert-px2rem(36);
-	line-height: 1.1;
-	text-transform: uppercase;
+	font-weight: 400;
+	font-size: convert-px2rem(32);
+	line-height: 1.2;
 
-	@include md {
-		font-size: convert-px2rem(70);
-	}
-}
-
-@mixin h2() {
-	font-weight: 700;
-	font-size: convert-px2rem(28);
-	line-height: 1.3;
-	text-transform: uppercase;
-
-	@include md {
+	@include lg {
 		font-size: convert-px2rem(42);
 	}
 }
 
-@mixin h3() {
-	font-weight: 600;
-	font-size: convert-px2rem(18);
+@mixin h2() {
+	font-weight: 400;
+	font-size: convert-px2rem(28);
 	line-height: 1.2;
 
-	@include md {
-		line-height: 1.3;
-		font-size: convert-px2rem(26);
+	@include lg {
+		font-size: convert-px2rem(36);
 	}
+}
+
+@mixin h3() {
+	font-weight: 400;
+	font-size: convert-px2rem(22);
+	line-height: 1.3;
+
+	@include lg {
+		font-size: convert-px2rem(28);
+	}
+}
+
+@mixin h4() {
+	font-weight: 600;
+	font-size: convert-px2rem(20);
+	line-height: 1.4;
 }
 
 @mixin main-text() {
-	font-weight: 500;
+	font-weight: 400;
 	font-size: convert-px2rem(16);
-	line-height: 1.3;
-
-	@include md {
-		font-size: convert-px2rem(18);
-	}
-}
-
-@mixin small-text() {
-	font-weight: 500;
-	font-size: convert-px2rem(14);
-	line-height: 1.3;
+	line-height: 1.5;
 }
 
 @mixin additional-text() {
 	font-weight: 400;
+	font-size: convert-px2rem(14);
+	line-height: 1.5;
+}
+
+@mixin small-text() {
+	font-weight: 400;
 	font-size: convert-px2rem(12);
-	line-height: 1.3;
-	font-style: italic;
+	line-height: 1.5;
+}
+
+@mixin helper-text() {
+	font-weight: 400;
+	font-size: convert-px2rem(10);
+	line-height: 1.5;
 }
