--- a/src/styles/default/root.scss
+++ b/src/styles/default/root.scss
@@ -12,6 +12,7 @@
 	--color-black-opacity-10: #21212110;
 	--color-black-opacity-30: #21212130;
 	--color-black-opacity-50: #21212150;
+	--color-black-opacity-70: #21212170;
 
 	--color-white: #fff;
 	--color-gray: #f8f8f8;
