--- a/src/styles/mixins/mixins.scss
+++ b/src/styles/mixins/mixins.scss
@@ -1,34 +1,40 @@
 @mixin hover-wrapper {
-  @media (hover: hover) {
-    &:hover {
-      @content;
-    }
-  }
+	@media (hover: hover) {
+		&:hover {
+			@content;
+		}
+	}
 }
 
 @mixin active-wrapper {
-  @media (hover: hover) {
-    &:active {
-      @content;
-    }
-  }
+	@media (hover: hover) {
+		&:active {
+			@content;
+		}
+	}
 }
 
 $maxWidthContainer: 768;
 
 @mixin adaptive-value($property, $startSize, $minSize) {
-  $addSize: $startSize - $minSize;
-  #{$property}: $startSize + px;
-  @media (max-width: #{$maxWidthContainer + px}) {
-    #{$property}: calc(
-      #{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidthContainer - 320})
-    );
-  }
+	$addSize: $startSize - $minSize;
+	#{$property}: $startSize + px;
+	@media (max-width: #{$maxWidthContainer + px}) {
+		#{$property}: calc(
+			#{$minSize + px} + #{$addSize} *
+				((100vw - 320px) / #{$maxWidthContainer - 320})
+		);
+	}
 }
 
 @mixin flex-center {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
+@mixin backdrop {
+	backdrop-filter: blur(10px);
+	-webkit-backdrop-filter: blur(10px);
 }
