--- a/src/components/global/modal/Modal.module.scss
+++ b/src/components/global/modal/Modal.module.scss
@@ -9,7 +9,7 @@
 	max-width: convert-px2rem(600);
 	max-height: 100%;
 	overflow: auto;
-	background-color: var(--color-white);
+	background-color: var(--background);
 	padding: convert-px2rem(50) convert-px2rem(20);
 	position: relative;
 }
