--- a/src/components/global/overlay/Overlay.module.scss
+++ b/src/components/global/overlay/Overlay.module.scss
@@ -10,7 +10,7 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: var(--color-overlay);
+	background-color: var(--bg-overlay);
 	z-index: var(--z-index-modal);
 	visibility: hidden;
 	opacity: 0;
