--- a/src/components/layouts/content/ContentLayout.module.scss
+++ b/src/components/layouts/content/ContentLayout.module.scss
@@ -9,6 +9,7 @@
 	padding: 0 convert-px2rem(20);
 	width: 100%;
 	margin: 0 auto;
+	position: relative;
 	@include md {
 		padding: 0 convert-px2rem(30);
 	}
