--- a/src/components/layouts/page/PageLayout.module.scss
+++ b/src/components/layouts/page/PageLayout.module.scss
@@ -11,6 +11,7 @@
 	flex-direction: column;
 	flex-grow: 1;
 	width: 100%;
+	padding-top: convert-px2rem(var(--header-height-number));
 	@include md {
 	}
 
