--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -11,7 +11,7 @@
 
 html {
 	font-size: var(--font-size_small);
-	@media (min-width: 320px) {
+	@media (min-width: 430px) {
 		font-size: var(--font-size_normal);
 	}
 }
@@ -38,8 +38,8 @@ body {
 	line-height: var(--font-line-height);
 	font-family: var(--font-involve), sans-serif;
 	font-weight: 400;
-	background: var(--color-background-1);
-	color: var(--color-text-1);
+	background: var(--background);
+	color: var(--foreground);
 
 	-webkit-tap-highlight-color: transparent;
 	-webkit-text-size-adjust: 100%;
