--- a/src/styles/mixins/typography.scss
+++ b/src/styles/mixins/typography.scss
@@ -61,3 +61,44 @@
 	font-size: convert-px2rem(10);
 	line-height: 1.5;
 }
+
+@mixin main-link() {
+	font-weight: 400;
+	font-size: convert-px2rem(12);
+	line-height: 1.5;
+	text-underline-offset: convert-px2rem(2);
+	width: fit-content;
+	text-decoration: underline;
+
+	@include hover-wrapper {
+		opacity: 0.7;
+	}
+
+	@include active-wrapper {
+		opacity: 0.7;
+	}
+
+	&:disabled {
+		opacity: 0.3;
+	}
+}
+
+@mixin menu-link() {
+	font-weight: 400;
+	font-size: convert-px2rem(14);
+	line-height: 1.5;
+	text-underline-offset: convert-px2rem(2);
+	width: fit-content;
+
+	@include hover-wrapper {
+		text-decoration: underline;
+	}
+
+	@include active-wrapper {
+		text-decoration: underline;
+	}
+
+	&:disabled {
+		opacity: 0.3;
+	}
+}
