--- a/src/styles/mixins/typography.scss
+++ b/src/styles/mixins/typography.scss
@@ -62,10 +62,7 @@
 	line-height: 1.5;
 }
 
-@mixin main-link() {
-	font-weight: 400;
-	font-size: convert-px2rem(12);
-	line-height: 1.5;
+@mixin link-1() {
 	text-underline-offset: convert-px2rem(2);
 	width: fit-content;
 	text-decoration: underline;
@@ -77,26 +74,6 @@
 
 	@include active-wrapper {
 		opacity: 0.7;
-	}
-
-	&:disabled {
-		opacity: 0.3;
-	}
-}
-
-@mixin menu-link() {
-	font-weight: 400;
-	font-size: convert-px2rem(14);
-	line-height: 1.5;
-	text-underline-offset: convert-px2rem(2);
-	width: fit-content;
-
-	@include hover-wrapper {
-		text-decoration: underline;
-	}
-
-	@include active-wrapper {
-		text-decoration: underline;
 	}
 
 	&:disabled {
