--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -31,7 +31,7 @@ body {
 	overflow-y: scroll;
 
 	line-height: var(--font-line-height);
-	font-family: var(--font-involve), sans-serif;
+	font-family: var(--primary-font), sans-serif;
 	font-weight: 400;
 	background: var(--background);
 	color: var(--foreground);
