--- a/src/app/test/components/content/TestContent.module.scss
+++ b/src/app/test/components/content/TestContent.module.scss
@@ -4,9 +4,14 @@
 @import "@/styles/mixins/breakpoints";
 @import "@/styles/mixins/mixins";
 
+.block {
+	padding-bottom: convert-px2rem(100);
+}
+
 .wrap {
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 	gap: convert-px2rem(20);
 	@include md {
 	}
