--- a/src/styles/default/root.scss
+++ b/src/styles/default/root.scss
@@ -73,6 +73,12 @@
 	--bg-button-disabled: var(--color-gray-dark);
 	--fg-button-disabled: var(--color-gray-light);
 
+	// link-1
+	--color-link-1-hover: var(--color-green-light);
+	--color-link-1-active: var(--color-green-medium);
+	// link disabled
+	--color-link-disabled: var(--color-gray-dark);
+
 	// shadow
 	--box-shadow: 0px 0px 10px 0px #1212121a;
 
