--- a/src/styles/mixins/typography.scss
+++ b/src/styles/mixins/typography.scss
@@ -62,10 +62,28 @@
 	line-height: 1.5;
 }
 
-@mixin main-link() {
+@mixin link-1() {
 	font-weight: 400;
-	font-size: convert-px2rem(12);
-	line-height: 1.5;
+	text-underline-offset: convert-px2rem(2);
+	width: fit-content;
+	text-decoration: underline;
+	transition: color var(--transition-duration);
+
+	@include hover-wrapper {
+		color: var(--color-link-1-hover);
+	}
+
+	@include active-wrapper {
+		color: var(--color-link-1-active);
+	}
+
+	&:disabled {
+		color: var(--color-link-disabled);
+	}
+}
+
+@mixin link-2() {
+	font-weight: 400;
 	text-underline-offset: convert-px2rem(2);
 	width: fit-content;
 	text-decoration: underline;
@@ -77,26 +95,6 @@
 
 	@include active-wrapper {
 		opacity: 0.7;
-	}
-
-	&:disabled {
-		opacity: 0.3;
-	}
-}
-
-@mixin menu-link() {
-	font-weight: 400;
-	font-size: convert-px2rem(14);
-	line-height: 1.5;
-	text-underline-offset: convert-px2rem(2);
-	width: fit-content;
-
-	@include hover-wrapper {
-		text-decoration: underline;
-	}
-
-	@include active-wrapper {
-		text-decoration: underline;
 	}
 
 	&:disabled {
