#add root link, typography

--- a/src/styles/default/root.scss
+++ b/src/styles/default/root.scss
@@ -76,6 +76,9 @@
 	// link-1
 	--color-link-1-hover: var(--color-green-light);
 	--color-link-1-active: var(--color-green-medium);
+	// link-2
+	--color-link-2-hover: var(--color-red-medium);
+	--color-link-2-active: var(--color-red-medium);
 	// link disabled
 	--color-link-disabled: var(--color-gray-dark);
 
