--- a/src/components/ui/links/root/RootLink.module.scss
+++ b/src/components/ui/links/root/RootLink.module.scss
@@ -4,26 +4,18 @@
 @import "@/styles/mixins/breakpoints";
 @import "@/styles/mixins/mixins";
 
-.block {
-	padding-bottom: convert-px2rem(100);
-}
-
-.wrap {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	gap: convert-px2rem(20);
+.link {
 	@include md {
 	}
 
 	@include lg {
 	}
-}
 
-.additionalText {
-	@include additional-text;
-}
+	&.var1 {
+		@include link-1;
+	}
 
-.helperText {
-	@include helper-text;
+	&.var2 {
+		@include link-2;
+	}
 }
