--- a/src/styles/mixins/typography.scss
+++ b/src/styles/mixins/typography.scss
@@ -87,17 +87,17 @@
 	text-underline-offset: convert-px2rem(2);
 	width: fit-content;
 	text-decoration: underline;
-	transition: opacity var(--transition-duration);
+	transition: color var(--transition-duration);
 
 	@include hover-wrapper {
-		opacity: 0.7;
+		color: var(--color-link-2-hover);
 	}
 
 	@include active-wrapper {
-		opacity: 0.7;
+		color: var(--color-link-2-active);
 	}
 
 	&:disabled {
-		opacity: 0.3;
+		color: var(--color-link-disabled);
 	}
 }
