--- a/src/styles/default/root.scss
+++ b/src/styles/default/root.scss
@@ -82,6 +82,10 @@
 	// link disabled
 	--color-link-disabled: var(--color-gray-dark);
 
+	// scrollbar
+
+	--color-scrollbar-thumb: var(--color-gray-medium);
+
 	// shadow
 	--box-shadow: 0px 0px 10px 0px #1212121a;
 
