--- a/src/components/global/modal/components/default/DefaultModal.module.scss
+++ b/src/components/global/modal/components/default/DefaultModal.module.scss
@@ -5,9 +5,16 @@
 @import "@/styles/mixins/mixins";
 
 .block {
+	text-align: center;
 	@include md {
 	}
 
 	@include lg {
 	}
+}
+
+.type {
+	width: fit-content;
+	display: flex;
+	margin: 0 auto convert-px2rem(20);
 }
