#add form wrapper

--- a/src/components/forms/feedback/FeedbackForm.module.scss
+++ b/src/components/forms/feedback/FeedbackForm.module.scss
@@ -5,9 +5,14 @@
 @import "@/styles/mixins/mixins";
 
 .block {
+	// width: 100%;
 	@include md {
 	}
 
 	@include lg {
 	}
+}
+
+.form {
+	// width: 100%;
 }
