--- a/src/components/ui/form/inputs/root/RootInput.module.scss
+++ b/src/components/ui/form/inputs/root/RootInput.module.scss
@@ -14,6 +14,31 @@
 
 .input {
 	display: block;
-	margin-bottom: 10px;
-	background-color: aquamarine;
+	width: 100%;
+	min-height: convert-px2rem(var(--input-height-number));
+
+	font-size: convert-px2rem(16);
+
+	border: 1px solid var(--color-input-border);
+	border-radius: convert-px2rem(var(--input-border-radius-number));
+	padding: convert-px2rem(5) convert-px2rem(16);
+	transition: border-color var(--transition-duration);
+
+	&:focus-visible {
+		border-color: var(--color-input-border-focused);
+	}
+
+	&:-webkit-autofill,
+	&:-webkit-autofill:hover,
+	&:-webkit-autofill:focus,
+	&:-webkit-autofill:active {
+		-webkit-box-shadow: 0 0 0 convert-px2rem(var(--input-height-number))
+			var(--bg-input-autofill) inset !important;
+		-webkit-text-fill-color: var(--fg-input-autofill);
+	}
+
+	&::placeholder {
+		opacity: 1;
+		color: var(--color-input-placeholder);
+	}
 }
