--- a/src/styles/default/root.scss
+++ b/src/styles/default/root.scss
@@ -22,7 +22,8 @@
 	--color-black-light: #303030;
 	--color-black-medium: #212121;
 	--color-black-dark: #000000;
-	--color-black-opacity-10: rgba(18, 18, 18, 0.1);
+	--color-black-opacity-10: rgba(33, 33, 33, 0.1);
+	--color-black-opacity-50: rgba(33, 33, 33, 0.5);
 
 	--color-gray-light: #f8f8f8;
 	--color-gray-medium: #e0e0e0;
@@ -86,12 +87,22 @@
 	--color-scrollbar-thumb: var(--color-gray-medium);
 
 	// shadow
-	--box-shadow: 0px 0px 10px 0px #1212121a;
+	--box-shadow: 0px 0px 10px 0px #2121211a;
 
 	// z-index
 	--z-index-burger: 98;
 	--z-index-header: 99;
 	--z-index-modal: 100;
+
+	// input
+	--color-input-border: var(--color-gray-dark);
+	--color-input-border-focused: var(--color-black-medium);
+	--bg-input: var(--color-white);
+	--bg-input-autofill: var(--color-white);
+	--fg-input-autofill: var(--color-black-medium);
+	--color-input-placeholder: var(--color-black-opacity-50);
+	--input-height-number: 50;
+	--input-border-radius-number: 10;
 
 	// &.dark {
 	// }
