--- a/src/components/ui/form/inputs/root/Input.module.scss
+++ b/src/components/ui/form/inputs/root/Input.module.scss
@@ -12,6 +12,11 @@
 	}
 }
 
+.wrap {
+	display: block;
+	position: relative;
+}
+
 .input {
 	display: block;
 	width: 100%;
@@ -21,7 +26,8 @@
 
 	border: 1px solid var(--color-input-border);
 	border-radius: convert-px2rem(var(--input-border-radius-number));
-	padding: convert-px2rem(5) convert-px2rem(16);
+	padding: convert-px2rem(5) convert-px2rem(36) convert-px2rem(5)
+		convert-px2rem(16);
 	transition: border-color var(--transition-duration);
 
 	&:focus-visible {
@@ -41,4 +47,26 @@
 		opacity: 1;
 		color: var(--color-input-placeholder);
 	}
+}
+
+.buttons {
+	position: absolute;
+	right: convert-px2rem(16);
+	top: 0;
+	height: convert-px2rem(var(--input-height-number));
+	@include flex-center;
+}
+
+.reset {
+	width: convert-px2rem(16);
+	height: convert-px2rem(16);
+}
+
+.error {
+	display: block;
+	@include helper-text;
+	color: var(--color-alert);
+	position: absolute;
+	top: 100%;
+	left: convert-px2rem(16);
 }
