--- a/src/styles/default/root.scss
+++ b/src/styles/default/root.scss
@@ -104,6 +104,9 @@
 	--input-height-number: 50;
 	--input-border-radius-number: 10;
 
+	// focus
+	--color-outline-focus: var(--color-gray-dark);
+
 	// &.dark {
 	// }
 }
