--- a/src/components/ui/form/inputs/root/Input.module.scss
+++ b/src/components/ui/form/inputs/root/Input.module.scss
@@ -42,6 +42,10 @@
 		border-color: var(--color-alert) !important;
 	}
 
+	&.password {
+		padding-right: convert-px2rem(58);
+	}
+
 	&:-webkit-autofill,
 	&:-webkit-autofill:hover,
 	&:-webkit-autofill:focus,
