--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -101,7 +101,7 @@ a {
 
 a,
 button {
-	&:focus {
+	&:focus-visible {
 		outline: 2px solid var(--color-outline-focus) !important;
 		outline-offset: 1px;
 	}
