--- a/src/styles/mixins/mixins.scss
+++ b/src/styles/mixins/mixins.scss
@@ -80,3 +80,25 @@ $maxWidthContainer: 1280;
 	-moz-user-select: none;
 	-ms-user-select: none;
 }
+
+@mixin scrollbar {
+	@-moz-document url-prefix() {
+		* {
+			scrollbar-width: thin;
+			scrollbar-color: var(--color-scrollbar-thumb) transparent;
+		}
+	}
+
+	*::-webkit-scrollbar {
+		height: 8px;
+		width: 8px;
+	}
+	*::-webkit-scrollbar-track {
+		background: transparent;
+		border-radius: 5px;
+	}
+	*::-webkit-scrollbar-thumb {
+		background-color: var(--color-scrollbar-thumb);
+		border-radius: 5px;
+	}
+}
