--- a/src/components/ui/buttons/close/CloseButton.module.scss
+++ b/src/components/ui/buttons/close/CloseButton.module.scss
@@ -7,6 +7,7 @@
 .button {
 	width: convert-px2rem(24);
 	height: convert-px2rem(24);
+	flex-shrink: 0;
 	@include flex-center();
 
 	@include hover-opacity;
