--- a/src/components/ui/form/inputs/file/componens/rules/FileInputRules.module.scss
+++ b/src/components/ui/form/inputs/file/componens/rules/FileInputRules.module.scss
@@ -4,16 +4,7 @@
 @import "@/styles/mixins/breakpoints";
 @import "@/styles/mixins/mixins";
 
-.block {
-	@include md {
-	}
-
-	@include lg {
-	}
-}
-
-.wrap {
-	display: flex;
-	flex-direction: column;
-	gap: convert-px2rem(10);
+.rules {
+	@include small-text();
+	opacity: 0.5;
 }
