#add checkbox group

--- a/src/components/ui/form/checkbox-group/CheckboxGroup.module.scss
+++ b/src/components/ui/form/checkbox-group/CheckboxGroup.module.scss
@@ -5,6 +5,9 @@
 @import "@/styles/mixins/mixins";
 
 .block {
+	display: flex;
+	flex-direction: column;
+	gap: convert-px2rem(2);
 	@include md {
 	}
 
