--- a/src/components/ui/form/radio-button/RadioButton.module.scss
+++ b/src/components/ui/form/radio-button/RadioButton.module.scss
@@ -4,6 +4,18 @@
 @import "@/styles/mixins/breakpoints";
 @import "@/styles/mixins/mixins";
 
+.block {
+	display: flex;
+	flex-direction: column;
+	gap: convert-px2rem(4);
+
+	&.horizontal {
+		flex-direction: row;
+		flex-wrap: wrap;
+		gap: convert-px2rem(10);
+	}
+}
+
 .label {
 	position: relative;
 	display: flex;
@@ -49,6 +61,10 @@
 		bottom: 0;
 		overflow: hidden;
 		top: 0;
+	}
+
+	&:checked {
+		border-color: var(--color-radio-border-focused);
 	}
 
 	&:checked::before {
