--- a/src/styles/default/root.scss
+++ b/src/styles/default/root.scss
@@ -117,6 +117,11 @@
 	--color-radio-point: var(--color-black-medium);
 	--bg-radio: var(--color-white);
 
+	// select
+
+	--color-dropdown-indicator: var(--color-gray-dark);
+	--color-option-focused: var(--color-gray-light);
+	--color-option-selected: var(--color-gray-medium);
 	// focus
 	--color-outline-focus: var(--color-gray-dark);
 
