--- a/src/styles/select.scss
+++ b/src/styles/select.scss
@@ -32,6 +32,10 @@
 
 			border-color: var(--color-input-border-focused) !important;
 		}
+
+		&--is-focused {
+			border-color: var(--color-input-border-focused) !important;
+		}
 	}
 
 	&__dropdown-indicator {
