#add select styles

--- a/src/styles/select.scss
+++ b/src/styles/select.scss
@@ -38,6 +38,11 @@
 		}
 	}
 
+	&__placeholder {
+		opacity: 1 !important;
+		color: var(--color-input-placeholder) !important;
+	}
+
 	&__dropdown-indicator {
 		transition:
 			transform var(--transition-duration),
