#add file input styles

--- a/src/components/ui/form/inputs/textarea/Textarea.module.scss
+++ b/src/components/ui/form/inputs/textarea/Textarea.module.scss
@@ -43,7 +43,7 @@
 	font-size: convert-px2rem(16);
 	padding-right: convert-px2rem(32);
 
-	// resize: vertical;
+	resize: vertical;
 	min-height: convert-px2rem(150);
 	max-height: convert-px2rem(400);
 
