--- a/src/components/ui/form/inputs/file/FileInput.module.scss
+++ b/src/components/ui/form/inputs/file/FileInput.module.scss
@@ -14,6 +14,8 @@
 
 .wrap {
 	display: flex;
-	flex-direction: column;
-	gap: convert-px2rem(10);
+}
+
+.button {
+	margin-bottom: convert-px2rem(10) !important;
 }
