--- a/src/components/ui/fields/date-picker/DatePicker.module.scss
+++ b/src/components/ui/fields/date-picker/DatePicker.module.scss
@@ -16,14 +16,27 @@
 	position: relative;
 }
 
+.inputWrap {
+	&.hidden {
+		opacity: 0;
+		width: 0;
+		height: 0;
+		overflow: hidden;
+		display: block;
+	}
+}
+
 .picker {
+	width: fit-content;
 	background-color: var(--background);
-	box-shadow: var(--box-shadow);
+	border: 1px solid var(--color-input-border);
+	border-radius: convert-px2rem(var(--input-border-radius-number));
+	margin-top: -1px;
 
 	&.modal {
 		z-index: 1;
 		position: absolute;
-		top: 100%;
+
 		left: 0;
 		visibility: hidden;
 		opacity: 0;
