--- a/src/components/ui/fields/file/FileInput.module.scss
+++ b/src/components/ui/fields/file/FileInput.module.scss
@@ -15,6 +15,14 @@
 .wrap {
 }
 
+.label {
+	opacity: 0;
+	width: 0;
+	height: 0;
+	overflow: hidden;
+	display: block;
+}
+
 .button {
 	margin-bottom: convert-px2rem(10) !important;
 }
