--- a/src/styles/select.scss
+++ b/src/styles/select.scss
@@ -72,8 +72,8 @@
 		border-radius: convert-px2rem(var(--input-border-radius-number)) !important;
 		border: 1px solid var(--color-input-border-focused) !important;
 		background-color: var(--bg-input) !important;
-		// border-top: none !important;
-		margin-top: convert-px2rem(-1) !important;
+		border-top: none !important;
+		margin-top: 0 !important;
 		@include scrollbar;
 	}
 
