#add input disabled

--- a/src/components/ui/fields/input/Input.module.scss
+++ b/src/components/ui/fields/input/Input.module.scss
@@ -17,10 +17,6 @@
 	position: relative;
 }
 
-.label {
-	cursor: text;
-}
-
 .input {
 	display: block;
 	width: 100%;
@@ -44,6 +40,10 @@
 
 	&.password {
 		padding-right: convert-px2rem(58);
+	}
+
+	&:disabled {
+		cursor: not-allowed;
 	}
 
 	&:-webkit-autofill,
