--- a/src/components/ui/buttons/root/RootButton.module.scss
+++ b/src/components/ui/buttons/root/RootButton.module.scss
@@ -100,6 +100,7 @@
 	&:disabled {
 		background-color: var(--bg-button-disabled) !important;
 		color: var(--fg-button-disabled) !important;
+		border-color: var(--bg-button-disabled) !important;
 
 		cursor: not-allowed;
 	}
