--- a/src/styles/default/root.scss
+++ b/src/styles/default/root.scss
@@ -118,6 +118,7 @@
 	--color-radio-border-focused: var(--color-black-medium);
 	--color-radio-point: var(--color-black-medium);
 	--bg-radio: var(--color-white);
+	--bg-radio-disabled: var(--color-gray-medium);
 
 	// select
 
