--- a/src/components/global/overlay/Overlay.module.scss
+++ b/src/components/global/overlay/Overlay.module.scss
@@ -8,7 +8,7 @@
 	position: fixed;
 	top: 0;
 	left: 0;
-	width: 100%;
+	width: 100vw;
 	height: 100%;
 	background-color: var(--bg-overlay);
 	z-index: var(--z-index-modal);
@@ -18,7 +18,7 @@
 		opacity var(--transition-duration),
 		visibility var(--transition-duration);
 	@include flex-center;
-	@include backdrop();
+	@include backdrop;
 
 	&.open {
 		visibility: visible;
