--- a/src/components/ui/fields/input/Input.module.scss
+++ b/src/components/ui/fields/input/Input.module.scss
@@ -30,7 +30,7 @@
 		convert-px2rem(16);
 	transition: border-color var(--transition-duration);
 
-	&.focused {
+	&:focus-visible {
 		border-color: var(--color-input-border-focused);
 	}
 
