--- a/src/components/ui/fields/date-picker/DatePickerComponent.module.scss
+++ b/src/components/ui/fields/date-picker/DatePickerComponent.module.scss
@@ -22,6 +22,20 @@
 	width: fit-content;
 	display: flex;
 	flex-direction: column;
+	position: relative;
+
+	&.isDisabled {
+		&::after {
+			content: "";
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			z-index: 3;
+			cursor: not-allowed;
+		}
+	}
 
 	&.modal {
 		z-index: 2;
