--- a/src/components/pages/home/sections/hero/HeroSection.module.scss
+++ b/src/components/pages/home/sections/hero/HeroSection.module.scss
@@ -21,6 +21,7 @@
 	background-color: var(--foreground);
 	color: var(--background);
 	padding: convert-px2rem(20);
+	min-height: convert-px2rem(300);
 }
 
 .navigation {
@@ -43,9 +44,9 @@
 }
 
 .prev {
-	left: convert-px2rem(5);
+	left: convert-px2rem(20);
 }
 
 .next {
-	right: convert-px2rem(5);
+	right: convert-px2rem(20);
 }
