--- a/src/components/ui/fields/slider/SliderField.module.scss
+++ b/src/components/ui/fields/slider/SliderField.module.scss
@@ -20,24 +20,23 @@
 }
 
 .sliderWrap {
-	padding: 0 convert-px2rem(8);
+	padding: 0 convert-px2rem(15);
 }
 
 .handle {
-	width: 16px !important;
-	height: 16px !important;
-	margin-top: -6px !important;
+	width: 32px !important;
+	height: 32px !important;
+	margin-top: -14px !important;
+	border-width: 10px !important;
 }
 
 .slider {
-	padding: 6px 0 !important;
-	height: 16px !important;
+	padding: 14px 0 !important;
+	height: 32px !important;
 }
 
 .rail {
-	height: 2px !important;
 }
 
 .track {
-	height: 2px !important;
 }
