--- a/source-code/frontend/src/shared/ui/fields/input-wrapper/label/InputWrapperLabel.module.scss
+++ b/source-code/frontend/src/shared/ui/fields/input-wrapper/label/InputWrapperLabel.module.scss
@@ -5,8 +5,6 @@
 @import "@/styles/mixins/mixins";
 
 .block {
-	position: relative;
-	width: 100%;
 	@include md {
 	}
 
@@ -14,11 +12,14 @@
 	}
 }
 
-.errorMessage {
-	display: block;
-	@include helper-text;
+.wrap {
+	margin-bottom: convert-px2rem(5);
+	align-self: flex-start;
+
+	label {
+		@include main-text();
+	}
+}
+.asterisk {
 	color: var(--color-alert);
-	position: absolute;
-	top: 100%;
-	left: 0;
 }
