--- a/source-code/frontend/src/shared/styles/default/root.scss
+++ b/source-code/frontend/src/shared/styles/default/root.scss
@@ -101,6 +101,7 @@
 	--bg-input-autofill: var(--color-white);
 	--fg-input-autofill: var(--color-black-medium);
 	--color-input-placeholder: var(--color-black-opacity-50);
+	--bg-input-disabled: var(--color-gray-medium);
 	--fg-input-disabled: var(--color-gray-dark);
 	--input-height-number: 50;
 	--input-border-radius-number: 10;
