--- a/source-code/frontend/src/shared/ui/fields/input/ui/Input.module.scss
+++ b/source-code/frontend/src/shared/ui/fields/input/ui/Input.module.scss
@@ -45,6 +45,7 @@
 	&:disabled {
 		cursor: not-allowed;
 		color: var(--fg-input-disabled);
+		background-color: var(--bg-input-disabled);
 	}
 
 	&:-webkit-autofill,
