--- a/source-code/frontend/src/shared/ui/fields/textarea/ui/Textarea.module.scss
+++ b/source-code/frontend/src/shared/ui/fields/textarea/ui/Textarea.module.scss
@@ -18,8 +18,7 @@
 	overflow: hidden;
 	border-radius: convert-px2rem(var(--input-border-radius-number));
 	border: 1px solid var(--color-input-border);
-	padding: convert-px2rem(14) convert-px2rem(4) convert-px2rem(14)
-		convert-px2rem(16);
+	padding: convert-px2rem(14) convert-px2rem(4) convert-px2rem(14) 0;
 	transition: border-color var(--transition-duration);
 
 	&:has(.input:focus-visible) {
@@ -41,10 +40,12 @@
 	width: 100%;
 	font-size: convert-px2rem(16);
 	padding-right: convert-px2rem(32);
-
+	padding-left: convert-px2rem(16);
 	resize: vertical;
 	min-height: convert-px2rem(150);
 	max-height: convert-px2rem(400);
+	border: none;
+	outline: none;
 	@include scrollbar;
 
 	&::-webkit-scrollbar-thumb {
